RESOLVED FIXED 203708
Don't leak documents with a pending requestIdleCallback
https://bugs.webkit.org/show_bug.cgi?id=203708
Summary Don't leak documents with a pending requestIdleCallback
Ryosuke Niwa
Reported 2019-10-31 17:31:30 PDT
Even when there is a pending requestIdleCallback, documents that have been stopped should be immediately collected.
Attachments
Fixes the bug (8.87 KB, patch)
2019-10-31 17:40 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2019-10-31 17:40:32 PDT
Created attachment 382527 [details] Fixes the bug
WebKit Commit Bot
Comment 2 2019-11-01 10:03:58 PDT
The commit-queue encountered the following flaky tests while processing attachment 382527 [details]: requestidlecallback/requestidlecallback-document-gc.html bug 203745 The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 3 2019-11-01 10:04:43 PDT
Comment on attachment 382527 [details] Fixes the bug Clearing flags on attachment: 382527 Committed r251924: <https://trac.webkit.org/changeset/251924>
WebKit Commit Bot
Comment 4 2019-11-01 10:04:45 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-11-01 10:05:15 PDT
Jonathan Bedard
Comment 6 2019-11-01 14:03:20 PDT
Jonathan Bedard
Comment 7 2019-11-01 14:05:08 PDT
wk1 on Catalina and Mojave are failing ~50% of the time.
Jonathan Bedard
Comment 8 2019-11-04 09:10:00 PST
(In reply to Jonathan Bedard from comment #7) > wk1 on Catalina and Mojave are failing ~50% of the time. Ryosuke fixed this, <https://trac.webkit.org/changeset/251944>
Note You need to log in before you can comment on or make changes to this bug.